<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginTop="@dimen/menu_space_giant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.tobiapplications.menu.ui.views.authenthication.EmailAutoCompleteTextView
                android:id="@+id/emailAutoComplete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.tobiapplications.menu.ui.views.authenthication.AuthEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/login_hint_password"
                app:type="password"/>

            <com.tobiapplications.menu.ui.views.PrimaryButton
                android:id="@+id/signInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:text="@string/login_action_sign_in"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="@color/colorGrey"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:text="@string/login_new_to_menucard"/>

                <View
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="@color/colorGrey"/>

            </LinearLayout>

            <com.tobiapplications.menu.ui.views.PrimaryButton
                android:id="@+id/goToRegistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/login_go_to_registration"
                app:secondary="true"/>

            <TextView
                android:id="@+id/resetPassword"
                style="?android:textAppearanceSmall"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textColor="@color/colorPrimaryLight"
                android:text="@string/login_reset_password"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
