<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/menu_space_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/menu_space_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?android:attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/tobacco_selection_toolbar_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/explanation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/menu_space_default"
        android:gravity="center"
        android:textSize="@dimen/menu_space_default"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toEndOf="@id/guidelineStart"
        app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
        android:text="@string/tobacco_selection_explanation"/>

    <ListView
        android:id="@+id/listView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/menu_space_default"
        app:layout_constraintTop_toBottomOf="@id/explanation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/select"
        android:dividerHeight="1dp"
        android:layout_marginBottom="@dimen/menu_space_mini"
        android:divider="@color/colorLightGrey"
        android:paddingBottom="@dimen/menu_space_default" />

    <com.tobiapplications.menu.ui.views.general.PrimaryButton
        android:id="@+id/select"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/menu_space_mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="visible"
        app:text="@string/general_select"/>


</androidx.constraintlayout.widget.ConstraintLayout>